feat: added crud account and account movement, some configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
@@ -16,10 +16,9 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 
 # Spring Cloud Stream Configuration
-spring.cloud.stream.bindings.outputChannel.destination=accountMovements
-spring.cloud.stream.bindings.inputChannel.destination=accountMovements
-spring.cloud.stream.bindings.outputChannel.content-type=application/json
-spring.cloud.stream.bindings.inputChannel.content-type=application/json
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
+spring.rabbitmq.host=rabbitmq
 
 # Logging Configuration
 logging.level.org.springframework=INFO
